--- a/D/manifest.json
+++ b/D/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Access Cam App",
   "short_name": "CamApp",
-  "start_url": "index.html",
+  "start_url": "camassscfwxc.html",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#007bff",
